--- a/conf.example
+++ b/conf.example
@@ -3,4 +3,6 @@ $arkpath = '/home/steam/ArkServer';
 $steampath = '/home/steam/steamcmd';
 $scriptpath = '/';
 $maintintervals = 5;
+$nohup = '/bin/nohup';
+$nice = '/bin/nice';
 ?>
