steamcmd var now requires full path to steamcmd. Added a configuration script.

--- a/conf/conf.example
+++ b/conf/conf.example
@@ -1,6 +1,6 @@
 mypath = '/opt/tametheark/arks'
 arkpath = '/home/steam/ArkServer'
-steampath = '/home/steam/steamcmd'
+steampath = '/home/steam/steamcmd/steamcmd.sh'
 scriptpath = '/'
 maintintervals = 15
 nohup = '/bin/nohup'
